icon and title updated

--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,42 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <title>Project Two: Timers</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="./semantic-dist/semantic.css" />
-    <script src="vendor/babel-standalone.js"></script>
-    <script src="vendor/react.js"></script>
-    <script src="vendor/react-dom.js"></script>
-    <script src="vendor/uuid.js"></script>
-    <script src="vendor/fetch.js"></script>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Legal</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./semantic-dist/semantic.css" />
+  <script src="vendor/babel-standalone.js"></script>
+  <script src="vendor/react.js"></script>
+  <script src="vendor/react-dom.js"></script>
+  <script src="vendor/uuid.js"></script>
+  <script src="vendor/fetch.js"></script>
+</head>
 
-  <body>
-    <div id ="unal-top">
-      <div id= "logo" class="ui image">
-        <a href="http://unal.edu.co">
-            <svg width="93%" height="93%">
-              <image xlink:href="http://www.legal.unal.edu.co/rlunal/resources/images/escudoUnal.svg" width="100%" height="100%" class="hidden-print"></image>
-            </svg>
-        </a>
-      </div>
-      <div id="site-container">
-        <h1 id="title">Legal</h1>
+<body>
+  <div id="unal-top">
+    <div id="logo" class="ui image">
+      <a href="http://unal.edu.co">
+        <svg width="93%" height="93%">
+          <image xlink:href="http://www.legal.unal.edu.co/rlunal/resources/images/escudoUnal.svg" width="100%"
+            height="100%" class="hidden-print"></image>
+        </svg>
+      </a>
+    </div>
+    <div id="site-container">
+      <h1 id="title">Legal</h1>
+    </div>
+  </div>
+  <div id="main" class="main ui">
+    <div class="ui vertical stripe segment">
+      <h1 class="ui dividing header centered" id="text">Documentos</h1>
+      <div id="content">
       </div>
     </div>
-    <div id="main" class="main ui">
-      <div class="ui vertical stripe segment">
-        <h1 class="ui dividing header centered" id="text">Documentos</h1>
-        <div id="content">
-        </div> 
-      </div>
-    </div>
-    <script type="text/babel" src="./js/client.js"></script>
-    <script type="text/babel" src="./js/helpers.js"></script>
-    <script
-      type="text/babel"
-      data-plugins="transform-class-properties"
-      src="./js/app.js"
-    ></script>
-  </body>
+  </div>
+  <script type="text/babel" src="./js/client.js"></script>
+  <script type="text/babel" src="./js/helpers.js"></script>
+  <script type="text/babel" data-plugins="transform-class-properties" src="./js/app.js"></script>
+</body>
 
 </html>
