Retoques de estilo y limpieza de texto

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Legal</title>
+    <title>Legal - Universidad Nacional de Colombia
+    </title>
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/semantic-dist/semantic.css" />
   </head>
@@ -23,7 +24,7 @@
         </a>
       </div>
       <div id="site-container">
-        <h1 id="title">Legal</h1>
+        <h1 id="title">Sistema de Información Normativa, Jurisprudencial y de Conceptos de Régimen Legal</h1>
       </div>
     </div>
     <div id="main" class="main ui">
